added fetcher interface, fixed test set up with AAA test pattern implemented