@@ -25,10 +25,31 @@ lazy val root = (project in file("."))
       case x => MergeStrategy.first
     },
     Test / fork := true,
+    // Use Java 17 for tests (Spark 3.5.0 compatibility)
+    Test / javaHome := {
+      val java17Home = file("/opt/homebrew/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home")
+      if (java17Home.exists()) Some(java17Home) else None
+    },
     Test / javaOptions ++= Seq(
       "-Xmx2G",
       "-XX:+UseG1GC",
-      "-Dlog4j2.configurationFile=log4j2-test.xml"
+      "-Dlog4j2.configurationFile=log4j2-test.xml",
+      "-Dhadoop.home.dir=/tmp",
+      // Open modules for Spark compatibility with Java 17
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-opens=java.base/java.net=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+      "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+      "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+      "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
     ),
     Compile / javaOptions ++= Seq(
       "-Xmx2G",
